installation/k8s/web/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podchy-web-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podchy-web
  template:
    metadata:
      labels:
        app: podchy-web
    spec:
      containers:
        - name: podchy-web
          image: reqhiem/podchy-web:latest
          command: ["nginx", "-g", "daemon off;"]
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"
